# ChangeLog for media-fonts/ttf-fifthhorseman-dkg-handwriting
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  15 Nov 2012; Francisco Blas Izquierdo Riera (klondike)
  ttf-fifthhorseman-dkg-handwriting-0.009.ebuild:
  Removing unnecessary lines

*ttf-fifthhorseman-dkg-handwriting-0.009 (14 Nov 2012)

  14 Nov 2012; Francisco Blas Izquierdo Riera (klondike)
  +ttf-fifthhorseman-dkg-handwriting-0.009.ebuild, +metadata.xml:
  Adding the dkg-handwriting font
