@@ -1,5 +1,18 @@
-DIST ttf-fifthhorseman-dkg-handwriting-0.009.tar.lzma 127051 SHA256 05012e21e91f3128349baa67695e78c7a911c55dd87ab597e853afc78b84f687 SHA512 1e682ed79ae0113fcd6817e8651531a133a3ba25ff274f2b0b55d5ac5a9049a9957ffe253e12536e726409cf4f77570673b5f7e5e3fb9059c0152d3c4c988c3c WHIRLPOOL 3b69710522105a7518dc455408e6978baae15f4291958f0e88d9866b5c91141daa17ac7dcecd78b46af21bdcecadbb5e7ed3c3edd5a21fff78ed526db2cb4c8e
-DIST ttf-fifthhorseman-dkg-handwriting-TTF-0.009.tar.lzma 178131 SHA256 e4ab875a794efb1a58615a6ed81a5b81ca833eb71510027418ceed8d5a849e2a SHA512 0793ad99d24b869f17e424a9e4e2400ed11a959eb2d0574d4da263359b32aeaadc51c4f909dfab96380deae5ca5b7ce927bfb49da808bf4abfa50c0b4c4ef985 WHIRLPOOL 009ed2b16cd13a8bda6e1ca2805cec2e5ea6ac4d1aec4c26c337ef41d508804bcc73c11cc726e8bc332c74998e1ea7bbe09ce2e8fc35434b8d249bf8034cae9f
-EBUILD ttf-fifthhorseman-dkg-handwriting-0.009.ebuild 703 SHA256 18b88c0d93ca7cf3bd8a9a8309f784f914af25dc883dcd4c26b669508172bdd6 SHA512 8e724a5f1be9ad8f1a1029600d3d2246d79d6c4b448a28f9fede28a2fdcac0d7701b2676aa8f34f1637e6c89644aba3baf563387715c62a88095aab26936c9fc WHIRLPOOL 7d143b7025f3ea0a8e281643a47ef33d27bd545d34e5923e2d2fca4c1bb9ee8d3e718b76fe645756e128239a2c04cee69b56b209e6e1b57296ac96b1d4822eb9
-MISC ChangeLog 497 SHA256 6af69b0f239d3a9732ccb5b210602441ae60c686985b44f7e9c8a8a3ac975923 SHA512 82248c4a40f1bc62eb86286da845cdca5e5f441e36d9b4a43da6533618ba6037ca4fb2b20d113bea9c59ae7e63b566d91cc235d19c7caa996342d99cf9c2e74a WHIRLPOOL 46543a1dd73d3d370fa4947f87845fda03f6a8533eef7d1e748f6cd6f48ee4863958f48854825375876fda61b0948c4ec441945c6c0036462eeac11a719a2d9b
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+DIST ttf-fifthhorseman-dkg-handwriting-0.15.tar.xz 307896 SHA256 3daf47e3f3d0b9f6d85bd6f1a6f65d706a49ede1c7fc60e1880cc8ba0cbdbdf5 SHA512 fa0eeaa7557b8c407261b9d2676afdccd824ff1db875ceb746ff3de1132814af301e8f0d6bb2d51f42d232993c1c7a2aa77c86b3d1395498c5f2d9854f238fa2 WHIRLPOOL abf2845b6ad693aabb99a4abab2b612fda50c8f561ca4e7406407a9fa549878d656c518db038c8788db7684f46d6e5c4a97bd8b83673078707369c7471401481
+EBUILD ttf-fifthhorseman-dkg-handwriting-0.15.ebuild 623 SHA256 015d74145143998630d618c6c2e7f5aa0abbaadb6a3666eccb462911edcf91af SHA512 64c055a16f168fd53770506b46303323950699d0bbb144cfab9a9551391f95a4d3909d4561e56ba7ba5c417984087b8fdc880ac785811bb80c705217c71b5f41 WHIRLPOOL c3b98fdb3a869579185fbb960591711f37b6a8603abedbfba871744c2154977c03d727fc08e0ae31521cd4f2e2a8a5cee1d8f828d32b6572a7feeee6f4acc352
+MISC ChangeLog 761 SHA256 403be4e2d6a1dbe772477bb9cd4c64b499168ec4beaa062c4a9d87b703155b5d SHA512 78334c63a1b28adc61de2c15c96de65591caf4b71870ab2dd1f3537399eef9f75785fec9464f5270b5d4c58e4a1ed05a02bc600ff59fdf0e531e588102583b4e WHIRLPOOL e5e4c7cef70b5107c6ee1c94d8ab2f76db9550d89c7c8d4b7db257f12d276516e80d3d98cf20a93315d49c3bc2be6243d65f2fd945a4c1c5415f268eeb48a751
 MISC metadata.xml 344 SHA256 0a0f1af25ec378957750e0ee591670e5e69a47e645b00ea089983df5de565488 SHA512 77701c07c3bf24b4b008195c6e3bfdc8939a0f11deafa0f01f4873532e090b09df9c986ab1ca2bd098de83233b5f26d18db7456cb51b1d1249ba03b43d0e2871 WHIRLPOOL 4affbf0b0d730df29572cd63f2d40414a7c677ea7bdfd64954191619b40cdcbe0365232f32b048970f3563f83ce0afb0816fd9925eb7274041d217b3a556083d
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iQEcBAEBCAAGBQJURJFJAAoJEKXBodJLEo5SKmUH/RntR1umb6ikv11WPkdsQeZx
+0Fo6HaEl3xoLP8OCpeE3qEakUPGn2pEK8ddIdonr4ic0YWKJd8sCZ5kKjMuxhyCd
+cxNOJugbF3lpeSFnyetuoeYq1IL5bXzRGkR3AMhAxM+F4FyqWpNhwimkkeQBNwSY
+TdoF/ck4nQC/L5jnDCS0TmbTlUkEeQbfanlwAzszpqWgphSHL7GbCyCwMdFXlRe6
+sNa9HdOIIwEw7Xt2CFDe6kYF2puBUu9EGwD3jxxrzoipUc9qHWjKQQlXblHSMQj0
+Szkb8Ds+QL7w9Y7xRc4O8sy3efKgsELfwzA5cS+/6kQC9PspM9i6McPiDl/rkSc=
+=Ky2w
+-----END PGP SIGNATURE-----
