@@ -1,6 +1,13 @@
 # ChangeLog for media-fonts/ttf-fifthhorseman-dkg-handwriting
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*ttf-fifthhorseman-dkg-handwriting-0.15 (20 Oct 2014)
+
+  20 Oct 2014; Francisco Blas Izquierdo Riera (klondike)
+  +ttf-fifthhorseman-dkg-handwriting-0.15.ebuild,
+  -ttf-fifthhorseman-dkg-handwriting-0.009.ebuild:
+  Update ttf-fifthhorseman-dkg-handwriting to 0.15
 
   15 Nov 2012; Francisco Blas Izquierdo Riera (klondike)
   ttf-fifthhorseman-dkg-handwriting-0.009.ebuild:
@@ -11,4 +18,3 @@
   14 Nov 2012; Francisco Blas Izquierdo Riera (klondike)
   +ttf-fifthhorseman-dkg-handwriting-0.009.ebuild, +metadata.xml:
   Adding the dkg-handwriting font
-
